Created database and a first functional state for the course controller

--- a/Courses-API/appsettings.Development.json
+++ b/Courses-API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=westcoasteducation.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
